css/main.css
/* ... */
::selection {
  background: #b3d4fc;
  text-shadow: none;
}

/*
 * A better looking default horizontal rule
 */

 hr {
  display: block;
  height: 1px;
  border: 0;
  border-top: 1px solid #ccc;
  margin: 1em 0;
  padding: 0;
}

/*
 * Remove the gap between audio, canvas, iframes,
 * images, videos and the bottom of their containers:
 * https://github.com/h5bp/html5-boilerplate/issues/440
 */

 audio,
 canvas,
 iframe,
 img,
 svg,
 video {
  vertical-align: middle;
}

/*
 * Remove default fieldset styles.
 */

 fieldset {
  border: 0;
  margin: 0;
  padding: 0;
}

/*
 * Allow only vertical resizing of textareas.
 */

 textarea {
  resize: vertical;
}

/* ==========================================================================
   Browser Upgrade Prompt
   ========================================================================== */

   .browserupgrade {
    margin: 0.2em 0;
    background: #ccc;
    color: #000;
    padding: 0.2em 0;
  }

/* ==========================================================================
   Author's custom styles
   ========================================================================== */



   /* ---------- General ----------*/

   .content-wrapper {
    margin: 0 auto;
    width: 85%;
    display: flex;
    justify-content: center;
    align-items: center;
    flex-flow: row wrap;
  }

  .container {
    min-width: 360px;
  }



  html {
    font-size: 16px;
  }

  body {
    font-size: 1em;
    font-family: 'Quicksand', sans-serif;
    color: #1F3C64;
    text-align: left;
  }

  ul,
  ol {
    list-style-type: none;
    margin: 0;
    padding: 0;
  }

  a {
    color: #FBFAEB;
    text-decoration: none;

  }

  h1 {
    font-weight: 300;
    font-size: 1.875em;
    margin: 0;
    text-transform: uppercase;
  }

  h2 {
    font-size: 1.625em;
    font-weight: 400;
    text-transform: uppercase;
  }

  h3 {
    font-size: 1.25em;
    font-weight: 400;
    text-transform: uppercase;
  }

  p {
    font-size: 1em;
    line-height: 1.375em;
    margin: 0;
  }

  img {
    width: ;
  }

  figure {
    margin: 0;
  }

  address {
    font-style: normal;
  }





  /* ---------- Base Header - Footer Styles ----------*/


  header,
  footer {
    background-color: #1F3C64;
  /* alternate bg teal
  background-color: #114267;
  */
  color: #FBFAEB;
}

header .content-wrapper {
  padding-top: 30px;
  padding-bottom: 30px;
  display: flex;
  justify-content: center;
  align-items: center;
  flex-flow: row wrap;
  
}

/* Is this figure style necessary? 
header figure {
  width: 100%;
  display: flex;
  justify-content: center;
  align-items: center;
  flex-flow: row wrap;
}
*/

header a {
  width: 100%;
  display: flex;
  justify-content: center;
  align-items: center;
  flex-flow: row wrap;
}

header p {
  font-weight: 300;
  text-transform: uppercase;
}

header .header-divider {
  background: #FBFAEB;
  height: 1px;
  width: 100%;
  margin: 20px 0 20px 0;
}

header nav {
  width: 98%;
  display: flex;
  align-items: center;
  flex-flow: row wrap;
}

header nav ul {
  display: flex;
  justify-content: space-between;
  list-style: none;
  width: 100%;
}

header nav ul li {
  font-size: .9375em;
}

footer .content-wrapper {
  display: flex;
  justify-content: center;
  align-items: center;
  flex-flow: row wrap;
}

footer h2 {
  margin: 0;
  padding: 50px 0 50px 0;
  width: 100%;
}

footer h3 {
  margin: 0;
  width: 100%;
}

footer p {
  font-size: .875em;
}

footer .contact-info {
  width: 100%;
  display: flex;
  flex-flow: row wrap;
}

footer .social {
  margin-top: 50px;
  width: 100%;
  display: flex;
  flex-flow: row wrap;
}

footer .social-icons {
  display: flex;
  justify-content: space-between;
  align-items: center;
  min-width: 125px;
}

footer .social-icons a {
  width: 40px;
  height: 40px;
  text-decoration: none;
  color: #FBFAEB;
}

footer .social-icons p {
  font-size: 3em;
}


footer .copyright {
  padding: 90px 0 35px 0;
  width: 100%;
}

footer .copyright p {
  font-size: .875em;
}



/* ---------- Main About (Hero) --------- */

#hero {
 background: url('../img/hero.jpg') center no-repeat; 
 background-size: cover;
 min-height: 290px;
 display: flex;
 justify-content: flex-start;
 align-items: center;
}






/* ---------- Main About (About) ---------- */





#about {
  display: flex;
  justify-content: flex-start;
  align-items: center;

}

#about .content-wrapper {    
  padding-top: 70px;
  padding-bottom: 50px;
  display: flex;
  justify-content: flex-start;
  align-items: center;
  flex-flow: row wrap;
}

#about h2 {
  margin: 0;
}

#about p {
}

#about .divider {
  background: #DCF0A2;
  height: 3px;
  width: 100%;
  margin: 20px 0 30px 0;
}





/* ---------- Main Portfolio ----------*/


#portfolio .content-wrapper {
  padding-top: 70px;
  padding-bottom: 50px;
  display: flex;
  justify-content: flex-start;
  align-items: center;
  flex-flow: row wrap;
}

#portfolio h2 {
  display: flex;
  margin: 0;
  width: 100%;
}

/*
#portfolio .divider {
  background: #DCF0A2;
  height: 2px;
  width: 100%;
  margin: 20px 0 0 0;
}
*/

#portfolio h3 {
  margin: 0;
  margin-bottom: 20px;
  margin-top: 60px;
  border-bottom: 2px solid #DCF0A2;
  border-top: 2px solid #DCF0A2;
  width: 100%;
  padding-top: 5px;
  padding-bottom: 5px;
}



#portfolio h4 {
  color: #1F3C64;
  font-weight: 600;
  margin: 0;
  margin-bottom: 0;
}

main #portfolio .photo-container {
 text-align: center;
 display: flex; 
 flex-direction: column; 
 justify-content: center; 
 align-content: center;
}

main #portfolio  .full-width-item {
  margin-bottom: 20px;
}

main #portfolio img {
  border: 1px solid #D3D3D3;
}

main #portfolio .full-width-item img {
 width: 100%;
}

#portfolio .thumbnail-wrapper-container {
  display: flex;
  flex-flow: row wrap;
  width: 100%;
}

main #portfolio .mobile-tablet-container {
 position: relative;
 text-align: center;
 display: flex; 
 justify-content: space-between; 
 align-content: flex-start;
 align-items: center;
 width: 100%;
}
/* ... */

